Add responsive styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ form h2 {
 }
 
 .results h2 {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 figcaption {
@@ -43,4 +43,11 @@ figcaption {
 
 .btn:focus {
   outline: none;
+}
+
+/* responsive styles */
+@media screen and (max-width: 550px) {
+  h1, h2 {
+    font-size: 1.4em;
+  }
 }
